@@ -64,8 +64,8 @@ def parse_cmdline_options(arglist):
                                        "exclude-globbing-filelist", "exclude-other-filesystems",
                                        "exclude-regexp=", "include=", "include-filelist=",
                                        "include-filelist-stdin", "include-globbing-filelist",
-                                       "include-regexp=", "null-separator", "verbosity=",
-                                       "write-sig-to="])
+                                       "include-regexp=", "max-blocksize", "null-separator",
+                                       "verbosity=", "write-sig-to="])
     except getopt.error, e:
         command_line_error("Bad command line option: %s" % (str(e),))
 
@@ -89,6 +89,8 @@ def parse_cmdline_options(arglist):
         elif opt == "--include-filelist-stdin":
             select_opts.append(("--include-filelist", "standard input"))
             select_files.append(sys.stdin)
+        elif opt == "--max-blocksize":
+            globals.max_blocksize = int(arg)
         elif opt == "--null-separator":
             globals.null_separator = 1
         elif opt == "-V":
